...

  @override
  State<MainShell> createState() => _MainShellState();
}

class _MainShellState extends State<MainShell> {
  static const _titles = ['课程研发'];

  static const _screens = [ProgramScreen()];

  @override
  Widget build(BuildContext context) {
    final programService = context.watch<ProgramService>();
...
